[package]
version = "0.7.13"
edition = "2021"
name = "simple_cache"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Minimal wrapper for a HTTP client to cache results on disk, forever"
license = "CC0-1.0"
publish = false

[dependencies]
quick-error = "2"
serde_json = "1.0.52"
serde = { version = "1.0.107", features = ["derive"] }
rusqlite = "0.28.0"
thread_local = "1.0.1"
tempfile = "3.1.0"
rmp-serde = "1.0.0"
parking_lot = "0.12.0"
ahash = "0.8.0"
fetcher = { path = "../fetcher/" }
brotli = "3.3.0"
tokio = { version = "1.6.0", features = ["rt-multi-thread"] }
log = "0.4.14"
