[package]
name = "tarball"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.41"
cargo_toml = "0.11.0"
crate_git_checkout = { path = "../crate_git_checkout", version = "0.4.7" }
hex = { version = "0.4.3", features = ["serde"] }
libflate = "1.0.0"
log = "0.4.14"
render_readme = { path = "../render_readme" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tar = "0.4.26"
thiserror = "1.0.26"
udedokei = { path = "../udedokei" }

[dev-dependencies]
repo_url = { path = "../repo_url", version = "0.3.3" }
