[package]
name = "tarball"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.65"
cargo_toml = "0.12.1"
crate_git_checkout = { path = "../crate_git_checkout", version = "0.4.7" }
hex = { version = "0.4.3", features = ["serde"] }
libflate = "1.2.0"
log = "0.4.17"
render_readme = { path = "../render_readme" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tar = "0.4.38"
thiserror = "1.0.35"
udedokei = { path = "../udedokei" }

[dev-dependencies]
repo_url = { path = "../repo_url", version = "0.3.3" }
