[package]
edition = "2018"
name = "user_db"
version = "0.3.5"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Stores mapping between Cargo crate authors and GitHub users"

[lib]
name ="user_db"
path = "src/lib_user_db.rs"

[dependencies]
rusqlite = "0.23.1"
github_info = { path = "../github_info", version = "0.9" }
repo_url = { path = "../repo_url" }
failure = "0.1.8"
parking_lot = "0.10.2"
