[package]
edition = "2018"
name = "user_db"
version = "0.3.9"
authors = ["Kornel <kornel@geekhood.net>"]
description = "Stores mapping between Cargo crate authors and GitHub users"
publish = false

[lib]
name ="user_db"
path = "src/lib_user_db.rs"

[dependencies]
rusqlite = "0.26.0"
github_info = { path = "../github_info", version = "0.9" }
repo_url = { path = "../repo_url" }
parking_lot = "0.11"
