[package]
name = "validator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.22", default-features = false }
feat_extractor = { version = "0.1.3", path = "../feat_extractor" }
kitchen_sink = { version = "0.9.10", path = "../kitchen_sink" }
semver = "1.0.14"
ahash = "0.8.0"
